--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DSAP</title>
-    <script type="module" src="./main4.js"></script>
+    <title>Document</title>
+    <script src="./main.js"></script>
 </head>
 <body>
-<canvas id="canvas"></canvas>
+<div id="body">
+    <div id="a">
+        <div id="aa"></div>
+    </div>
+    <div id="b"></div>
+</div>
+<div id="body">
+    <div id="c"></div>
+    <div id="d"></div>
+</div>
 </body>
 </html>
 
@@ -21,22 +30,59 @@
     padding: 0;
 }
 
-html {
-    width: 100vw;
-    height: 100vh;
-}
-
 body {
-    width: 100%;
-    height: 100%;
+    margin-top: 200px;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+
+    background-color: beige;
 }
 
-#canvas {
-    display: block;
-    position: fixed;
+#body {
+    display: flex;
+}
 
+#a {
+    width: 500px;
+    height: 50px;
+
+    padding: 2px 2px 2px 3px;
+
+    background-color: #7B7D7B;
+
+    border-bottom: 3px solid white;
+    border-right: 3px solid white;
+}
+
+#aa {
     width: 100%;
     height: 100%;
-    z-index: -1; /* TODO: consider removing */
+
+    background-color: #BDBEBD;
+
+    border-left: 3px solid white;
+    border-top: 3px solid white;
+}
+
+#b {
+    width: 200px;
+    height: 50px;
+
+    background-color: red;
+}
+
+#c {
+    width: 200px;
+    height: 50px;
+
+    background-color: orange;
+}
+
+#d {
+    width: 200px;
+    height: 50px;
+
+    background-color: blueviolet;
 }
 </style>
