--- a/W98 Practice/ui_components/windowchrome/windowchrome.html
+++ b/W98 Practice/ui_components/windowchrome/windowchrome.html
@@ -21,12 +21,23 @@
     not a part of the component
 -->
 
-<div class="windowchrome-a" style="width: 40vw">
-    <div class="windowchrome windowchrome-b" id="windowchrome">
-        <div class="custom_class_here windowchrome__section" style="height: 30px"></div>
-        <div class="custom_class_here windowchrome__section" style="height: 60px"></div>
+<div style="display: grid; gap: 5rem; width: 40vw">
+
+    <div class="windowchrome-a">
+        <div class="windowchrome-b" id="windowchrome">
+            <div class="custom_class_here windowchrome__section" style="height: 30px"></div>
+        </div>
     </div>
+
+    <div class="windowchrome-a">
+        <div class="windowchrome-b" id="windowchrome">
+            <div class="custom_class_here windowchrome__section" style="height: 30px"></div>
+            <div class="custom_class_here windowchrome__section" style="height: 60px"></div>
+        </div>
+    </div>
+
 </div>
+
 
 </body>
 </html>
