--- a/2Draw development/visual tests/test3/test3.html
+++ b/2Draw development/visual tests/test3/test3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DSAP</title>
+    <title>test3</title>
     <script type="module" src="./main4.js"></script>
 </head>
 <body>
