log: complete ArrayList visualization demo

--- a/DSA/temp.html
+++ b/DSA/temp.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temp</title>
 
-    <script type="module" src="./ArrayList.js" defer></script>
+    <!-- <script type="module" src="./ArrayList.js" defer></script> -->
+     <script type="module" src="./LinkedList.js" defer></script>
 </head>
 <body>
     
