--- a/DSA/visualizors/StaticArray/arraylist.html
+++ b/DSA/visualizors/StaticArray/arraylist.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Static Array</title>
+    <title>ArrayList</title>
 
     <!-- scripts -->
-    <script type="module" src="./ArrayList.js" defer></script>
+    <script type="module" src="./arraylist.js" defer></script>
 
     <!-- styles -->
     <link rel="stylesheet" href="../global.css">
