--- a/DSA/visualizors/StaticArray/arraylist.html
+++ b/DSA/visualizors/StaticArray/arraylist.html
@@ -16,6 +16,7 @@
 <div class="menubar" id="menubar">
     <button type="button" id="insert">insert</button>
     <button type="button" id="append">append</button>
+    <button type="button" id="prepend">prepend</button>
     <button type="button" id="removeByIndex">removeByIndex</button>
     <button type="button" id="removeByValue">removeByValue</button>
     <button type="button" id="get">get</button>
