log: comment in button.css

--- a/DSA/temp.html
+++ b/DSA/temp.html
@@ -6,7 +6,7 @@
     <title>Temp</title>
 
     <!-- <script type="module" src="./ArrayList.js" defer></script> -->
-     <script type="module" src="./LinkedList.js" defer></script>
+    <!-- <script type="module" src="./LinkedList.js" defer></script> -->
 </head>
 <body>
     
