--- a/W98 Practice/ui_components/button/button.html
+++ b/W98 Practice/ui_components/button/button.html
@@ -27,5 +27,9 @@
     </div>
 </button>
 
+<button type="button" class="w98-button" style="width: 50px; height: 50px;">
+    
+</button>
+
 </body>
 </html>
