log: rework w98 css files

--- a/W98 Practice/ui_components/clientarea/clientarea.html
+++ b/W98 Practice/ui_components/clientarea/clientarea.html
@@ -29,7 +29,8 @@
         </div>
     </div>
 
-    
+    <div class="w98-clientarea" style="width: 30vw; height: 30vw; background-color: blue;"></div>
+
 </div>
 
 
