--- a/W98 Practice/ui_components/taskbar/taskbar.html
+++ b/W98 Practice/ui_components/taskbar/taskbar.html
@@ -23,6 +23,8 @@
     not a part of the component
 -->
 
+<div style="display: grid; gap: 1rem;">
+
 <div class="taskbar-a" style="width: 80vw; height: 55px;">
     <div class="taskbar-b">
         <div class="taskbar">
@@ -39,6 +41,14 @@
         </div>
     </div>
 </div>
+
+<div class="w98-taskbar" style="width: 80vw; height: 55px;">
+    <button type="button" class="w98-button" style="width: 40%; height: 100%;"></button>
+    <button type="button" class="w98-button" style="width: 40%; height: 100%;"></button>
+</div>
+
+</div>
+
 
 </body>
 </html>
