--- a/W98 Practice/ui_components/windowchrome/windowchrome.html
+++ b/W98 Practice/ui_components/windowchrome/windowchrome.html
@@ -36,6 +36,15 @@
         </div>
     </div>
 
+    <div class="w98-windowchrome">
+        <div class="custom_class_here windowchrome__section" style="height: 30px;"></div>
+    </div>
+
+    <div class="w98-windowchrome">
+        <div class="custom_class_here windowchrome__section" style="height: 30px"></div>
+        <div class="custom_class_here windowchrome__section" style="height: 60px"></div>
+    </div>
+
 </div>
 
 
