--- a/W98 Practice/ui_components/button/button.html
+++ b/W98 Practice/ui_components/button/button.html
@@ -27,8 +27,8 @@
     </div>
 </button>
 
-<button type="button" class="w98-button" style="width: 50px; height: 50px;">
-    
+<button type="button" class="w98-button" style="width: 50px; height: 50px; margin-inline-start: 5rem;">
+
 </button>
 
 </body>
