--- a/DSA/temp.html
+++ b/DSA/temp.html
@@ -7,6 +7,8 @@
 
     <!-- <script type="module" src="./ArrayList.js" defer></script> -->
     <!-- <script type="module" src="./LinkedList.js" defer></script> -->
+    <!-- <script type="module" src="./Stack.js" defer></script> -->
+     <script type="module" src="./Queue.js" defer></script>
 </head>
 <body>
     
