--- a/DSA/temp.html
+++ b/DSA/temp.html
@@ -8,7 +8,8 @@
     <!-- <script type="module" src="./ArrayList.js" defer></script> -->
     <!-- <script type="module" src="./LinkedList.js" defer></script> -->
     <!-- <script type="module" src="./Stack.js" defer></script> -->
-     <script type="module" src="./Queue.js" defer></script>
+    <!-- <script type="module" src="./Queue.js" defer></script> -->
+    <script type="module" src="./BST.js" defer></script>
 </head>
 <body>
     
